Fix drop down menu overlap issue

--- a/antora-ui-camel/src/css/header.css
+++ b/antora-ui-camel/src/css/header.css
@@ -135,7 +135,7 @@ body {
 }
 
 .navbar-dropdown {
-  position: absolute;
+  
   display: none;
   top: calc(100% - 1px);
   background-color: var(--navbar-menu-background);
